# ros_nav2_assignment

./: CMakeLists.txt  package.xml
config/: nav2_params.yaml
launch/: localization.launch.py  map_loader.launch.py  navigation.launch.py
scripts/: send_goal.py
testbed_navigation/: CMakeLists.txt  README.md
testbed_navigation/config/: amcl_params.yaml
